# rust-todo-app-serverless

./: Cargo.toml  Dockerfile  Dockerfile.build  README.md  app.py  setup.py
.github/workflows/: main.yml
app/entities/: __init__.py  api_gateway.py  api_wateway.py  dynamodb.py  lambda_fn.py
app/props/: api_gateway.py  base.py  dynamodb.py  lambda_fn.py
app/stack/: todo_app_on_lambda_stack.py
lambda-image/test_resources/: dynamodb_scan_response.json
src/: dynamodb_operations.rs  main.rs
