[package]
name = "todo"
version = "0.1.0"
authors = ["ubuntu"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# 実行ファイルの配置場所を変更しているため明示的に指定する
[[bin]]
name = "hello-container"
path = "src/bin/hello-container.rs"

[dependencies]
lambda_runtime = "0.2.1"
serde = { version = "1", features = ["derive"] }
askama = "0.10.5"
rusoto_core = "0.46.0"
rusoto_dynamodb = "0.46.0"
rusoto_mock = "0.46.0"
tokio = "1.1.0"

# lamedh_runtime = "0.3.0"
# serde_json = "1.0.61"

