[package]
name = "todo"
version = "0.1.0"
authors = ["ubuntu"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
askama = "0.10.5"
rusoto_core = "0.46.0"
rusoto_dynamodb = "0.46.0"
rusoto_mock = "0.46.0"
tokio = "1.1.0"
lamedh_runtime = "0.3.0"
serde_json = "1.0.61"
serde = "1.0.123"

